Messages recipients bar alignment fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2125,6 +2125,11 @@ select {
 
 /**** tags screen classes***/
 
+
+#singleFieldTag{
+  margin-left: 5px;
+}
+
 .tags-list{
   margin-left:-19px;
 }
